--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <section class="experiencia" id="experiencia" aria-label="Experiência">
     <h2 class="subtitulo">Experiência</h2>
     <div>
-      <p class="experiencia-texto">Desenvolvo pequenos projetos, incluindo a criação de sites sistemas web responsivos. Tenho experiência em projetos ultilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong> e estou entusiasmado em contribuir com novos projetos para garantir uma experiência de usuários eficiente e atraente.</p>
+      <p class="experiencia-texto">Desenvolvo pequenos projetos, incluindo a criação de sites e sistemas web responsivos. Tenho experiência em projetos ultilizando <strong>HTML</strong>, <strong>CSS</strong> e <strong>JavaScript</strong> e estou entusiasmado em contribuir com novos projetos para garantir uma experiência de usuários eficiente e atraente.</p>
 
       <div class="empresa">
         <span class="empresa-ano">2024</span>
@@ -47,7 +47,7 @@
           <li>HTML</li>
           <li>CSS</li>
           <li>JavaScript</li>
-          <li>asp.Nete Core</li>
+          <li>asp.Net Core</li>
           <li>SignalR</li>
         </ul>
       </div>
