--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         </li>
 
         <li>
-          <a href="https://linkedin.com/in/renen-paulino"target="_blank">linkedin.com/in/renen-paulino  
+          <a href="https://linkedin.com/in/renan-paulino"target="_blank">linkedin.com/in/renan-paulino  
           </a>
         </li>
 
